SET(BUILD_SHARED_LIBS ON)

file(GLOB SOURCE_FILES tracer.cpp)
file(GLOB HEADER_FILES tracer.h instrum.h)

ADD_LIBRARY( Instrum ${SOURCE_FILES} )
SET_TARGET_PROPERTIES( Instrum PROPERTIES PUBLIC_HEADER "${HEADER_FILES}")

install(TARGETS Instrum 
    PUBLIC_HEADER DESTINATION include/${PROJECT_NAME}
    LIBRARY DESTINATION       lib/${PROJECT_NAME})
    